--- a/andrew/ch1/1.2-float2.html
+++ b/andrew/ch1/1.2-float2.html
@@ -2,15 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>FIG 1.3: A tidy set of cards</title>
-    <link rel="stylesheet" href="common.css">
+    <title>FIG 1.2: Two floated elements</title>
+    <link rel="stylesheet" href="../common.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab" rel="stylesheet">
     <style>
-        .temp {
-            margin: 0 -10px;
-            list-style: none;
-
-        }
         .cards {
             margin: 0 -10px;
             padding: 0;
@@ -31,7 +26,7 @@
 </head>
 <body>
 
-<h1>FIG 1.3: A tidy set of cards</h1>
+<h1>FIG 1.2: Two floated elements</h1>
 <section class="example clearfix">
     <ul class="cards">
         <li>
@@ -48,36 +43,37 @@
                 This means that we can use floats to create multiple columns.
             </p>
         </li>
-        <li>
-            <h2>Card 3</h2>
-            <p>
-                Floated items will always rise to the top. 
-                This means that we can use floats to create multiple columns.
-            </p>
-        </li>
-        <li>
-            <h2>Card 4</h2>
-            <p>
-                Floated items will always rise to the top. 
-                This means that we can use floats to create multiple columns.
-            </p>
-        </li>
-        <li>
-            <h2>Card 5</h2>
-            <p>
-                Floated items will always rise to the top. 
-                This means that we can use floats to create multiple columns.
-            </p>
-        </li>
-        <li>
-            <h2>Card 6</h2>
-            <p>
-                Floated items will always rise to the top. 
-                This means that we can use floats to create multiple columns.
-            </p>
-        </li>
     </ul>
 </section>
+<pre>
+    &lt;style&gt;
+        .cards li {
+            float: left;
+            width: calc(33.333333333% - 20px);
+            margin: 0 10px 20px 10px;
+        }
+    &lt;/style&gt;
+
+    &lt;ul class="cards"&gt;
+        &lt;li&gt;
+            &lt;h2&gt;Card 1&lt;/h2&gt;
+            &lt;p&gt;
+                Floated items will always rise to the top. 
+                This means that we can use floats to create 
+                multiple columns.
+            &lt;/p&gt;
+        &lt;/li&gt;
+        &lt;li&gt;
+            &lt;h2&gt;Card 2&lt;/h2&gt;
+            &lt;p&gt;
+                Floated items will always rise to the top. 
+                This means that we can use floats to create 
+                multiple columns.
+            &lt;/p&gt;
+        &lt;/li&gt;
+    &lt;/ul&gt;
+</pre>
+
 
 </body>
 </html>
