--- a/andrew/ch1/1.6-display-table.html
+++ b/andrew/ch1/1.6-display-table.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>FIG 1.6: The layout using display-table</title>
-    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="../common.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab" rel="stylesheet">
     <style>
         .wrapper {
@@ -27,7 +27,9 @@
             padding: 10px;
             border-radius: 5px;
         }
-
+        td {
+            padding: 0 1em;
+        }
     </style>
 </head>
 <body>
