--- a/andrew/ch1/1.3-float6.html
+++ b/andrew/ch1/1.3-float6.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>FIG 1.4: A messy set of cards</title>
-    <link rel="stylesheet" href="common.css">
+    <title>FIG 1.3: A tidy set of cards</title>
+    <link rel="stylesheet" href="../common.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab" rel="stylesheet">
     <style>
+        .temp {
+            margin: 0 -10px;
+            list-style: none;
+
+        }
         .cards {
             margin: 0 -10px;
             padding: 0;
@@ -26,7 +31,7 @@
 </head>
 <body>
 
-<h1>FIG 1.4: A messy set of cards</h1>
+<h1>FIG 1.3: A tidy set of cards</h1>
 <section class="example clearfix">
     <ul class="cards">
         <li>
@@ -34,9 +39,6 @@
             <p>
                 Floated items will always rise to the top. 
                 This means that we can use floats to create multiple columns.
-            </p>
-            <p>
-                This card now has some additional content.
             </p>
         </li>
         <li>
