--- a/andrew/ch1/1.5-inline-block.html
+++ b/andrew/ch1/1.5-inline-block.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>FIG 1.5: The inline-block layout</title>
-    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="../common.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab" rel="stylesheet">
     <style>
         .cards {
@@ -22,7 +22,9 @@
             padding: 10px;
             border-radius: 5px;
         }
-
+        td {
+            padding: 0 1em;
+        }
     </style>
 </head>
 <body>
