--- a/andrew/index.html
+++ b/andrew/index.html
@@ -20,17 +20,17 @@
                     The trouble with floats
                     <ul>
                         <li>
-                            <a href="1.2-float2.html">
+                            <a href="ch1/1.2-float2.html">
                                 FIG 1.2: Two floated elements
                             </a>
                         </li>
                         <li>
-                            <a href="1.3-float6.html">
+                            <a href="ch1/1.3-float6.html">
                                 FIG 1.3: A tidy set of cards
                             </a>
                         </li>
                         <li>
-                            <a href="1.4-messy6.html">
+                            <a href="ch1/1.4-messy6.html">
                                 FIG 1.4: A messy set of cards
                             </a>
                         </li>
@@ -40,13 +40,292 @@
                     Fixing the float problem
                     <ul>
                         <li>
-                            <a href="1.5-inline-block.html">
+                            <a href="ch1/1.5-inline-block.html">
                                 FIG 1.5: The inline-block layout
                             </a>
                         </li>
                         <li>
-                            <a href="1.6-display-table.html">
+                            <a href="ch1/1.6-display-table.html">
                                 FIG 1.6: The layout using display-table
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li>
+            Chapter 3. The New layout
+            <ul>
+                <li>
+                    Formatting Contexts in CSS
+                    <ul>
+                        <li>
+                            <a href="ch3/3.01-out-of-flow.html">
+                                FIG 3.1: The float is out of flow
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch3/3.02-float-contained.html">
+                                FIG 3.2: The float is contained
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch3/3.03-flow-root.html">
+                                FIG 3.3: The container as a new BFC
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch3/3.04-behind-out-of-flow.html">
+                                FIG 3.4: Behind out-of-flow items
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    Floats
+                    <ul>
+                        <li>
+                            <a href="ch3/3.05-floated.html">
+                                FIG 3.5: Floated items
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch3/3.06-shape-outside.html">
+                                FIG 3.6: shape-outside
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    Positioning
+                    <ul>
+                        <li>
+                            <a href="ch3/3.a-positioning.html">
+                                Positioning
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch3/3.07-absolute-position.html">
+                                FIG 3.7: Absolute position
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch3/3.08-fixed-position.html">
+                                FIG 3.8: Fixed position
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch3/3.09-sticky-position.html">
+                                FIG 3.9: Sticky position
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    Multiple-column layout
+                    <ul>
+                        <li>
+                            <a href="ch3/3.11-three-columns.html">
+                                FIG 3.11: Three columns
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    Flexbox
+                    <ul>
+                        <li>
+                            <a href="ch3/3.12-flexbox.html">
+                                FIG 3.12: Flexbox
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch3/3.13-flexbox-overflow.html">
+                                FIG 3.13: Flexbox overflow
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch3/3.14-flexbox-wrap.html">
+                                FIG 3.14: Flexbox wrap
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch3/3.15-flex-one-dimentional.html">
+                                FIG 3.15 Flexbox one-dimentional
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch3/3.16-flexbox-grid.html">
+                                FIG 3.16: Flexbox grid
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    CSS Grid Layout
+                    <ul>
+                        <li>
+                            <a href="ch3/3.17a-grid-layout.html">
+                                FIG 3.17a: Grid layout
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch3/3.17b-grid-gap.html">
+                                FIG 3.17b: Grid gap
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch3/3.18-grid-number.html">
+                                FIG 3.18: Grid number
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch3/3.19-grid-white-space.html">
+                                FIG 3.19: Grid white space
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch3/3.20-grid-template.html">
+                                FIG 3.20: Grid template
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch3/3.21-grid-empty-area.html">
+                                FIG 3.21: Grid empty area
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li>
+            Chapter 4. Alignment Control
+            <ul>
+                <li>
+                    Aligning flex items
+                    <ul>
+                        <li>
+                            <a href="ch4/4.01-flex-stretch.html">
+                                FIG 4.01: Flex stretch
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch4/4.02-flex-start.html">
+                                FIG 4.02: Flex start
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch4/4.03-flex-self.html">
+                                FIG 4.03: Flex self
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch4/4.05-flex-column.html">
+                                FIG 4.05: Flex column
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    Aligning grid items
+                    <ul>
+                        <li>
+                            <a href="ch4/4.06-grid-stretch.html">
+                                FIG 4.06: Grid stretch
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch4/4.08-grid-start.html">
+                                FIG 4.08: Grid start
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch4/4.09-grid-self.html">
+                                FIG 4.09: Grid self
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    Justfying grid items
+                    <ul>
+                        <li>
+                            <a href="ch4/4.10-grid-justify.html">
+                                FIG 4.10: Grid justify
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    Justifying flex items
+                    <ul>
+                        <li>
+                            <a href="ch4/4.11-flex-justify.html">
+                                FIG 4.11: Flex justify
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch4/4.12-flex-align.html">
+                                FIG 4.12: Flex align
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch4/4.13-flex-space.html">
+                                FIG 4.13: Flex space
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    Aligning and Justfying Grid Tracks
+                    <ul>
+                        <li>
+                            <a href="ch4/4.14-grid-align.html">
+                                FIG 4.14: Grid align
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch4/4.15-grid-content.html">
+                                FIG 4.15: Grid content
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    Alignment with Auto Margins
+                    <ul>
+                        <li>
+                            <a href="ch4/4.16-flex-margin.html">
+                                FIG 4.16: Flex margin
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li>
+            Chapter 5. Responsive by Default
+            <ul>
+                <li>
+                    <ul>
+                        <li>
+                            <a href="ch5/5.01-flex.html">
+                                FIG 5.01: Flex
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch5/5.02-flex-wrap.html">
+                                FIG 5.02: Flex wrap
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch5/5.04-grid-autofill.html">
+                                FIG 5.04: Grid autofill
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch5/5.06-grid-minmax.html">
+                                FIG 5.06: Grid minmax
                             </a>
                         </li>
                     </ul>
