--- a/andrew/index.html
+++ b/andrew/index.html
@@ -307,6 +307,7 @@
             Chapter 5. Responsive by Default
             <ul>
                 <li>
+                    <code>auto-fill</code> and <code>auto-fit</code>
                     <ul>
                         <li>
                             <a href="ch5/5.01-flex.html">
@@ -326,6 +327,21 @@
                         <li>
                             <a href="ch5/5.06-grid-minmax.html">
                                 FIG 5.06: Grid minmax
+                            </a>
+                        </li>
+                        <li>
+                            <a href="ch5/5.07-grid-autofit.html">
+                                FIG 5.07: Grid autofit
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    Controlling Sizing with the <code>flex</code> Properties
+                    <ul>
+                        <li>
+                            <a href="ch5/5.a-flex-properties.html">
+                                <code>flex</code> properties
                             </a>
                         </li>
                     </ul>
