--- a/andrew/ch3/3.17a-grid-layout.html
+++ b/andrew/ch3/3.17a-grid-layout.html
@@ -36,7 +36,7 @@
             <li class="index"><a href="../index.html">Index of examples</a></li>
         </ul>
         <div class="inner">
-            <h1>Flex Items</h1>
+            <h1>Grid Items</h1>
         </div>
     </header>
     <section class="example">
